# otelarrow-treasury

./: README.md  docker-compose.yaml  otel-collector-config.yaml
.github/: funding.yaml
.github/workflows/: ci.yml
otelarrow-treasury-datasource/: bun.lockb  docker-compose.yaml  package.json
otelarrow-treasury-datasource/provisioning/datasources/: datasources.yml
otelarrow-treasury-datasource/src/: README.md  plugin.json
otelarrow-treasury-server/: Cargo.toml  build.rs  schema.sql
otelarrow-treasury-server/proto/: arrow_service.proto
otelarrow-treasury-server/scripts/: er_diagram.md  generate_sql_from_er.py
otelarrow-treasury-server/src/: database.rs  main.rs
test/: test.py
